# Jeu_Coree_2024

./: CMakeLists.txt  README.md
JeuTropStylee/: CMakeLists.txt  mapjeu.tiled-session
JeuTropStylee/code/: fin.c  grotte.c  main.c  sous_main.c
JeuTropStylee/decor_map/: Chateau.tsx  MUR 32x32 ROUGE.tsx  grotte.tmx  interieur.tmx
JeuTropStylee/decor_map/NorthLand/: Barrel.aseprite  Chest.aseprite  table_1.aseprite  table_2.aseprite
code/: fin.c  grotte.c  main.c  maison.c  menu.h  sous_main.c
decor_map/: Chateau decors.tsx  Chateau sol.tsx  Escalier chateau.tsx  Grotte.tsx  INTERIEUR 32x32.tsx  Intérieur 16x16.tsx  MUR 32x32 JAUNE.tsx  MUR 32x32.tsx  Maison.tsx  Tiles.tsx  barriere.tsx  ecran_accueil.tmx  interieur2.tmx  interieur_cuisine.tmx  interieur_cuisine2.tmx  map.tmx  map_fin.tmx  mapjeu.tiled-session
decor_map/NorthLand/: Box.aseprite  Building_1.aseprite  Building_1_enter.aseprite  Chair_1.aseprite  Tiles.aseprite  Tree_1.aseprite  Tree_2.aseprite  stump.aseprite
